<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Data Structures in Real Life</string>
    <string name="array">Array</string>
    <string name="linked_list">Linked List</string>
    <string name="stack">Stack</string>
    <string name="queue">Queue</string>
    <string name="heap">Heap</string>
    <string name="hash_table">Hash Table</string>
    <string name="tree">Tree</string>
    <string name="graph">Graph</string>
    <string name="code">Code</string>
    <string name="arraydefine">An array is a collection of similar items stored at contiguous memory locations. It acts as a container which can hold a fix number of items and these items should be of the same type. Most of the data structures make use of arrays to implement their algorithms.</string>
    <string name="linked_listdefine">A Linked List is a list of elements that are randomly stored in the memory and linked together. It consists of nodes where each node contains a data field and a reference to the next node in the list. They are used over arrays because the memory is allocated dynamically to these nodes.</string>
    <string name="stackdefine">A Stack is an abstract linear data structure that allows addition and removal of elements in a particular order according to the LIFO (Last In First Out) principle. Every time an element is added, it goes on the top of the stack and the only element that can be removed is also the one at the top of the stack, just like a pile of objects.</string>
    <string name="queuedefine">A Queue is also an abstract linear data structure that follows the FIFO (First In First Out) methodology, i.e. the data item stored first will be accessed first. One end of the queue is always used to insert data (enqueue) and the other is used to remove data (dequeue).</string>
    <string name="heapdefine">Heap is a special case of balanced binary tree data structure. A priority queue is a special type of queue in which each element is associated with a priority and is served according to its priority. Heaps are great for implementing a priority queue because of the largest and smallest element at the root of the tree for a max-heap and a min-heap respectively. </string>
    <string name="hash_tabledefine">Hash Table is a data structure which stores data in the form of key-value pairs. Thus, it becomes a data structure in which insertion and search operations are very fast if we know the index of the desired data. Hashing is a technique to convert a range of key values into a range of indexes of an array, generally, using a modulo operator.</string>
    <string name="treedefine">A tree is a non-linear hierarchical data structure that consists of nodes connected by edges. Non-linear because it does not store data in a sequential manner. In a tree, the topmost node is known as a root node. Each node contains some data and the link or reference of other nodes that can be called its children.</string>
    <string name="graphdefine">A Graph is a non-linear data structure consisting of vertices and edges, used to represent elements that share connections. Edges can have a value associated with them, called weight. If a graph has many edges, it’s called a dense graph. Otherwise, it’s called a sparse graph.</string>
    <string name="arrayproblem">We all must have used the <font color="#B2EBF2">Online Ticket Booking system</font> at least once, it might be for booking tickets for a train, a bus, a flight, a movie or any other show. If we want to book a seat, suppose for a movie, just visit the online platform, select a movie and a particular time for which it displays a 2D array representing a theatre. </string>
    <string name="linked_listproblem">We all have used a <font color="#F8BBD0">Music Player</font> to entertain ourselves. And we add our favourite songs to it. Suppose you have 3 songs in your playlist. After playing Song 1, Song 2 will be played, and then the next, it doesn\'t stop after playing one song. As the songs are connected in the playlist, nodes are connected in a Singly linked list. Here the songs are connected in a single direction, thus we cannot go backwards.</string>
    <string name="stackproblem">We all have used a <font color="#E1BEE7">Text Editor</font> and still use it often, whether it be Notepad, WordPad, etc. You must have come across the Undo and the Redo operations present in the Editor. The Undo operation is used to revert the effect of the last operation done whereas the Redo operation is used to restore the actions done using undo function. These operations are maintained in two separate stacks- UNDO and REDO.</string>
    <string name="queueproblem">We all have used or seen a <font color="#DCEDC8">shared printer</font>, either at computer labs or at an office. Ever wondered how each computer in the network is connected to the printer to get the job done? The printer maintains a printing \"queue\" internally, and prints the jobs in sequence based on which came first, i.e. First In, First Out.</string>
    <string name="heapproblem">You must have been to an <font color="#ffcdd2">Adventure park</font>, or at least seen one in the movies. Queues at some ride at the park leverage a priority queue. That is there are some ways to get ahead of others in the waiting line either through special passes or being a single rider. These circumstances give priority to the individuals vs the other individuals in the ride line.</string>
    <string name="hash_tableproblem">If you have ever coded, you must have used a <font color="#B3E5FC">compiler</font>. Also getting errors is very common. For the identification of the errors in entering keywords in the compiler, the keywords are stored in a hash table. There are 32 keywords in C language. The hash function takes the lexeme that is the input keyword and produces a unique value from it.</string>
    <string name="treeproblem">If you use an operating system, something that you probably use every day is the <font color="#B2DFDB">file system</font>. In a file system, the files and folders are structured as a tree. You can follow a path from the root that will uniquely identify a subfolder (and all the files in it). </string>
    <string name="graphproblem">Do you use <font color="#FFECB3">Google Maps</font>? If your answer is yes, then you’ve definitely used graphs. GPS systems use graphs to find the shortest path from one destination to another. In a graph representing roads and locations, giving the distance as the weight is a logical choice.</string>
    <string name="arrayb1">↓ Select a seat ↓</string>
    <string name="arrayb2">↓ book and checkout ↓</string>
    <string name="linked_listb1">↓ Doubly Linked List ↓</string>
    <string name="linked_listb2">↓ Circular Doubly Linked List ↓</string>
    <string name="stackb1">↓ UNDO ↓</string>
    <string name="stackb2">↓ REDO ↓</string>
    <string name="queueb1">↓ Add to Print Queue ↓</string>
    <string name="queueb2">↓ Print ↓</string>
    <string name="heapb1">↓ Insert with priority ↓</string>
    <string name="heapb2">↓ Dequeue highest priority ↓</string>
    <string name="hash_tableb1">↓ No Error ↓</string>
    <string name="hash_tableb2">↓ Error ↓</string>
    <string name="treeb1">↓ Insert a file ↓</string>
    <string name="treeb2">↓ Move A Section ↓</string>
    <string name="graphb1">↓ Shortest path ↓</string>
    <string name="graphb2">↓ Removing an edge ↓</string>
    <string name="arrays1">From the 2D array displayed, select a particular seat, suppose seat[0][2] in the following implementation, the selected seat will be booked.</string>
    <string name="arrays2">After the seats have been selected, the checkout amount is calculated using the basic multiplication operation.</string>
    <string name="linked_lists1">In a Doubly Linked List, the nodes are connected in both directions, so we can go either way. That is from Song 2, Song 3 as well as Song 1 can be played. Bidirectional navigation is possible in this case.</string>
    <string name="linked_lists2">After all the songs are played, the music player will stop working. But sometimes we play a playlist in a repeat mode, so that after the last song is completed, the first song starts playing again. And it will play in a cyclic mode and never stop.</string>
    <string name="stacks1">The UNDO stack is used to store the history of all the operations that have been processed in the text editor. Whenever the Undo operation is called by the you, simply the top element from the UNDO stack is popped off and pushed to the REDO stack.</string>
    <string name="stacks2">But if you want to perform a Redo operation, just pop the top of the element of REDO stack and push it to UNDO stack.</string>
    <string name="queues1">When you request to print a file, your request is added to the print queue. It remains in the print queue until  it is processed or serviced. </string>
    <string name="queues2">When your request reaches the front of the print queue, your file is printed. This ensures that only one person at a time has access to the printer and this access is given on a first-come first-served basis.</string>
    <string name="heaps1">Riders with high priority are sent forward in the waiting line ahead of the ones without any passes, or those who want to ride along with their family. Insertion according to the priority takes place in the queue.</string>
    <string name="heaps2">Riders with high priority have to wait the least to enjoy the ride as they are dequeued first from the queue.</string>
    <string name="hash_tables1">If the entered keyword is a part of the hash table for the keywords of C language, the compiler doesn\'t show any error and the code compiles and runs successfully. </string>
    <string name="hash_tables2">If the entered keyword doesn\'t match with any keyword present in the hash table, then an error is displayed. Also, if any identifier for example the variable matches with any of the keywords, an error is shown.</string>
    <string name="trees1">To insert a file to an existing folder, simply create a file under a specific folder. In case of trees, create a file, link it to it\'s parent node and to children nodes if any.</string>
    <string name="trees2">In a tree, you can move an entire section of the tree (called a subtree) to a different position in the tree without affecting the lower levels of the hierarchy. Similarly in case of files and folders.</string>
    <string name="graphs1">The GPS System always shows you the best possible path in accordance with the shortest distance, which can be found in terms of weight that is given to each edge in the graph structure.</string>
    <string name="graphs2">An amazing feature of the GPS is to update the path if any construction or obstacle is reported. This is simply done by removing that particular edge from the graph structure.</string>
</resources>