<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scroll"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
android:background="@color/primary"
tools:context=".Array">

<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/arraydefine"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/work_sans_regular"
        android:gravity="center"
        android:lineSpacingExtra="3sp"
        android:padding="15dp"
        android:text="@string/arraydefine"
        android:textColor="@color/textOnSecondary"
        android:textIsSelectable="true"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/arrayTextProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/work_sans_regular"
        android:lineSpacingExtra="2dp"
        android:padding="10dp"
        android:text="@string/arrayproblem"
        android:textColor="@color/textOnSecondary"
        android:textIsSelectable="true"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/arrayImageProblem"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_height="335dp"
        android:contentDescription="@string/arrayproblem"
        android:src="@drawable/array1" />

    <Button
        android:textColor="@color/array_100"
        android:id="@+id/CodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/work_sans_semibold"
        android:text="@string/code"
        app:rippleColor="@color/array_100"
        android:onClick="CodeClicked"/>

    <Button
        android:id="@+id/arrayButtonS1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/work_sans_semibold"
        android:text="@string/arrayb1"
        app:rippleColor="@color/array_100"
        android:onClick="b1Clicked"/>

    <Button
        android:id="@+id/arrayButtonS2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:fontFamily="@font/work_sans_semibold"
        android:layout_marginBottom="10dp"
        android:text="@string/arrayb2"
        app:rippleColor="@color/array_100"
        android:onClick="b2Clicked"/>

    <ImageView
        android:id="@+id/arrayImageS1"
        android:layout_width="wrap_content"
        android:layout_height="335dp"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="14dp"
        android:contentDescription="@string/arrayproblem"
        app:srcCompat="@drawable/array2"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/arrayTextS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:lineSpacingExtra="2dp"
        android:padding="10dp"
        android:fontFamily="@font/work_sans_regular"
        android:text="@string/arrays1"
        android:textColor="@color/textOnSecondary"
        android:textIsSelectable="true"
        android:textSize="15sp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/arrayImageS2"
        android:layout_width="wrap_content"
        android:layout_height="335dp"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="14dp"
        android:contentDescription="@string/arrayproblem"
        app:srcCompat="@drawable/array3"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/arrayTextS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:lineSpacingExtra="2dp"
        android:padding="10dp"
        android:fontFamily="@font/work_sans_regular"
        android:text="@string/arrays2"
        android:textColor="@color/textOnSecondary"
        android:textIsSelectable="true"
        android:textSize="15sp"
        android:visibility="gone"/>


</LinearLayout>
</ScrollView>